--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: python
 python:
   - "3.5"
   - "3.6"
-  - "3.7"
+#   - "3.7"   Travis does not support 3.7 yet.
 
 script:
   - pip install coverage
