--- a/.gitignore
+++ b/.gitignore
@@ -65,6 +65,10 @@ instance/
 
 # Sphinx documentation
 docs/_build/
+docs/_static/
+docs/_templates/
+docs/make.bat
+docs/Makefile
 
 # PyBuilder
 target/
