--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,6 @@ script:
   - pip install .
   - pip install coverage
   - pip install codecov
-  - pip install pytest
   - python setup.py test
-  - coverage run -m pytest --ignore=tests/python37 tests
+  - coverage run -m unittest discover .
   - codecov
