--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,12 @@ language: python
 python:
   - "3.5"
   - "3.6"
-#   - "3.7"   Travis does not support 3.7 yet.
+
+matrix:
+  include:
+    - python: 3.7
+      dist: xenial
+      sudo: true
 
 script:
   - pip install .
