--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,5 @@ script:
   - pip install .
   - pip install coverage
   - pip install codecov
-  - python setup.py test
-  - coverage run -m unittest discover .
+  - python setup.py test && coverage run -m unittest discover .
   - codecov
