--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,9 @@ matrix:
       sudo: true
 
 script:
-  - pip install .
-  - pip install coverage
-  - pip install codecov
-  - python setup.py test && coverage run -m unittest discover .
+  - pip3 install .
+  - pip3 install coverage
+  - pip3 install codecov
+  - python3 setup.py test
+  - python3 -m coverage run -m unittest discover .
   - codecov
