--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,5 @@ script:
   - pip3 install coverage
   - pip3 install codecov
   - python3 setup.py test
-  - python3 -m coverage run -m unittest discover .
+  - coverage run setup.py test
   - codecov
