--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -7,7 +7,14 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [ '3.5', '3.6', '3.7', '3.8', '3.9', '3.10' ]
+        python-version: [
+            '3.5',
+            '3.6',
+            '3.7',
+            '3.8',
+            '3.9',
+#            '3.10'  FIXME: uncomment as soon as it is available.
+        ]
         os: [ ubuntu-latest, macOS-latest, windows-latest ]
     name: Python ${{ matrix.python-version }} on ${{ matrix.os }}
     steps:
