--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -34,18 +34,8 @@ jobs:
         run: scons test
 
       - name: Coverage
-        run: scons coverage
-
-      - name: Generate coverage report
-        run: pytest --cov=./ --cov-report=xml
-
-      - name: Upload coverage to Codecov
+        run: |
+          scons coverage
+          codecov
+      - name: Coverage Report
         uses: codecov/codecov-action@v1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./coverage.xml
-          directory: ./coverage/reports/
-          flags: unittests
-          env_vars: OS,PYTHON
-          name: codecov-umbrella
-          fail_ci_if_error: true
