--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -1,13 +1,20 @@
 name: jsons
 
-on: [push, pull_request]
+on: [pull_request]
 
 jobs:
   build:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [ '3.5', '3.6', '3.7', '3.8', '3.9' ]
+        python-version: [
+            '3.5',
+            '3.6',
+            '3.7',
+            '3.8',
+            '3.9',
+#            '3.10'  FIXME: uncomment as soon as it is available.
+        ]
         os: [ ubuntu-latest, macOS-latest, windows-latest ]
     name: Python ${{ matrix.python-version }} on ${{ matrix.os }}
     steps:
@@ -17,7 +24,18 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           architecture: x64
-      - run: |
+
+      - name: Install dependencies
+        run: |
           python -m pip install --upgrade pip
-          pip install .
-          python setup.py test
+          pip install .[test]
+
+      - name: Test
+        run: scons test
+
+      - name: Coverage
+        run: |
+          scons coverage
+          codecov
+      - name: Coverage Report
+        uses: codecov/codecov-action@v1
