--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -15,7 +15,11 @@ jobs:
             '3.9',
 #            '3.10'  FIXME: uncomment as soon as it is available.
         ]
-        os: [ ubuntu-latest, macOS-latest, windows-latest ]
+        os: [
+            ubuntu-latest,
+#            macOS-latest,  FIXME: seems to not work at the moment.
+            windows-latest
+        ]
     name: Python ${{ matrix.python-version }} on ${{ matrix.os }}
     steps:
       - uses: actions/checkout@master
