--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         python-version: [
-            '3.5',
+#             '3.5',  FIXME: time to deprecate?
             '3.6',
             '3.7',
             '3.8',
