--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       matrix:
         python-version: [
-#             '3.5',  FIXME: time to deprecate?
+            '3.5',
             '3.6',
             '3.7',
             '3.8',
@@ -17,14 +17,14 @@ jobs:
         ]
         os: [
             ubuntu-latest,
-#            macOS-latest,  FIXME: seems to not work at the moment.
+            macOS-latest,
             windows-latest
         ]
     name: Python ${{ matrix.python-version }} on ${{ matrix.os }}
     steps:
       - uses: actions/checkout@master
       - name: Setup python
-        uses: actions/setup-python@v1
+        uses: actions/setup-python@v3
         with:
           python-version: ${{ matrix.python-version }}
           architecture: x64
